--- a/wiki/threads/3320.md
+++ b/wiki/threads/3320.md
@@ -56,11 +56,11 @@ Ex. /give staff_fire
 
 [FONT=trebuchet ms][SIZE=5]If you run into troubles when installing, make sure you read through all the steps and see if you missed something before commenting.[/SIZE][/FONT]
 
-- -----------------------------------------
+\- \-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-
 
-                   [SIZE=5][FONT=book antiqua]<a href="'https://mega.nz/file/urx0QYhD#CUpJ_bc-r0ovLhYaaZMvrKhkAkbqRPgHklrxilVZAJ0'">DOWNLOAD</a>  v1.0.1[/FONT][/SIZE]
+                   [SIZE=5][FONT=book antiqua]<a href="https://mega.nz/file/urx0QYhD#CUpJ_bc\-r0ovLhYaaZMvrKhkAkbqRPgHklrxilVZAJ0">DOWNLOAD</a>  v1.0.1[/FONT][/SIZE]
 
-- -----------------------------------------
+\- \-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-
 
 [SIZE=5]<strong>Credits:</strong>[/SIZE]
 [FONT=book antiqua]AllModz
@@ -191,7 +191,7 @@ as well as the crystal that too shows up as the defualt test texture
 
 worth a look into but regardless great work,.. if ya get bored id love to see the thunder fists up in here.
 </blockquote>
-Considering those were issues with my last release - it’s pretty obv what’s gone on here...
+Considering those were issues with my last release \- it’s pretty obv what’s gone on here...
 
 ---
 <strong>CaramelFudge</strong>:
@@ -316,4 +316,4 @@ ERROR:  Parse error in column &#39;DuckGroup&#39;. Value &#39;DuckGroup&#39; is 
 Dis error occurs becuase  the alias is set up wrong in my experience 
 
 If you go to your sound  aliases  in the csv mentioned you&#39;ll probably find 
-# &lt;------ that at the top. Remove it
+\# &lt;\-\-\-\-\-\- that at the top. Remove it
