--- a/wiki/threads/3836.md
+++ b/wiki/threads/3836.md
@@ -9,4 +9,4 @@ ive installed harrybo21s nova crawlers and they work fine except for the part wh
 ---
 <strong>D-2-K</strong>:
 
-have you installed the <a href="'https://mega.nz/file/CHg2jCyB#drrmgHZY_23SuElj8mpnY-QekGCYkzJMA9qzxQXQnYM'">FX library</a>
+have you installed the <a href="https://mega.nz/file/CHg2jCyB#drrmgHZY_23SuElj8mpnY\-QekGCYkzJMA9qzxQXQnYM">FX library</a>
