--- a/wiki/threads/3839.md
+++ b/wiki/threads/3839.md
@@ -28,7 +28,7 @@ Probably we&#39;ll reopen t7mods.com but if that falls through for whatever reas
 
 <blockquote>Probably we&#39;ll reopen t7mods.com but if that falls through for whatever reason it&#39;ll be boatsandhoesbo3modding.com
 </blockquote>
-Perfect as long as you don’t want ppl registering - as he had that turned off literally the entire time on the last one
+Perfect as long as you don’t want ppl registering \- as he had that turned off literally the entire time on the last one
 
 Who needs members or the ability to post eh
 
