--- a/wiki/threads/3841.md
+++ b/wiki/threads/3841.md
@@ -17,14 +17,14 @@ This is my first time working with animations, so apologies if it&#39;s an easy 
 
 [MEDIA=youtube]XoSGVRUTkA0[/MEDIA]
 
-[MEDIA=youtube]c_JN-jJW7tI[/MEDIA]
+[MEDIA=youtube]c_JN\-jJW7tI[/MEDIA]
 
 ---
 <strong>Fanatic</strong>:
 
 <blockquote>[MEDIA=youtube]XoSGVRUTkA0[/MEDIA]
 
-[MEDIA=youtube]c_JN-jJW7tI[/MEDIA]
+[MEDIA=youtube]c_JN\-jJW7tI[/MEDIA]
 </blockquote>
 That&#39;s the vid I followed at first, and tried the tag_origin fix and didn&#39;t seem to work.
 
