--- a/wiki/threads/3842.md
+++ b/wiki/threads/3842.md
@@ -22,12 +22,12 @@ My game crash using it even tho i did all steps
 <strong>Spiki</strong>:
 
 you can use my AI. i did most of the main bosses from the game. check the list
-[URL unfurl=&quot;true&quot;]https://forum.modme.co/threads/spikis-asset-dump-most-ai.3087/[/URL]
+[URL unfurl=&quot;true&quot;]https://forum.modme.co/threads/spikis\-asset\-dump\-most\-ai.3087/[/URL]
 
 ---
 <strong>ShadingYT</strong>:
 
 <blockquote>you can use my AI. i did most of the main bosses from the game. check the list
-[URL unfurl=&quot;true&quot;]https://forum.modme.co/threads/spikis-asset-dump-most-ai.3087/[/URL]
+[URL unfurl=&quot;true&quot;]https://forum.modme.co/threads/spikis\-asset\-dump\-most\-ai.3087/[/URL]
 </blockquote>
 It really confused me i used it b4 but i couldnt know like how to set up panzer spawnpoint and stuff
