--- a/wiki/threads/3846.md
+++ b/wiki/threads/3846.md
@@ -15,11 +15,11 @@ the problem is
 they both use the same specialty names 
 
 &quot;from banana colada GSH file&quot; 
-#define PERK_BANANA_COLADA         &quot;specialty_immunecounteruav&quot;
+\#define PERK_BANANA_COLADA         &quot;specialty_immunecounteruav&quot;
 
 &quot;From icu gsh&quot;
 
-#define LOGICAL_PERK_ICU                  &quot;specialty_immunecounteruav&quot;
+\#define LOGICAL_PERK_ICU                  &quot;specialty_immunecounteruav&quot;
 
 ---
 <strong>THAN0S</strong>:
@@ -28,11 +28,11 @@ they both use the same specialty names
 they both use the same specialty names
 
 &quot;from banana colada GSH file&quot;
-#define PERK_BANANA_COLADA         &quot;specialty_immunecounteruav&quot;
+\#define PERK_BANANA_COLADA         &quot;specialty_immunecounteruav&quot;
 
 &quot;From icu gsh&quot;
 
-#define LOGICAL_PERK_ICU                  &quot;specialty_immunecounteruav&quot;
+\#define LOGICAL_PERK_ICU                  &quot;specialty_immunecounteruav&quot;
 </blockquote>
 
 ok thank you now how exactly do I change that properly
