--- a/wiki/threads/3844.md
+++ b/wiki/threads/3844.md
@@ -4,7 +4,7 @@
 ---
 <strong>blink-420</strong>:
 
-Anyone know how I would go about adding a timer on-screen that counts down?
+Anyone know how I would go about adding a timer on\-screen that counts down?
 
 ---
 <strong>Sleepy216</strong>:
