formatting and size

--- a/wiki/threads/3709.md
+++ b/wiki/threads/3709.md
@@ -2,19 +2,19 @@
 
 
 ---
-<strong>bubba443</strong>:
+<strong><span style="color:#34a7f9;">bubba443</span>:</strong>
 
 <img src="1160">
 How does one fix this? Is it from overlapping brushes or is it from too many vertices in my map?
 
 ---
-<strong>Spiki</strong>:
+<strong><span style="color:#34a7f9;">Spiki</span>:</strong>
 
 thats what happens when you rip maps with husky XD
 and ya too many verts
 
 ---
-<strong>Wakaveli_</strong>:
+<strong><span style="color:#34a7f9;">Wakaveli_</span>:</strong>
 
 <blockquote><img src="1160">
 How does one fix this? Is it from overlapping brushes or is it from too many vertices in my map?
@@ -22,7 +22,7 @@ How does one fix this? Is it from overlapping brushes or is it from too many ver
 How did you end up fixing this? Just too many verts yeah?
 
 ---
-<strong>bubba443</strong>:
+<strong><span style="color:#34a7f9;">bubba443</span>:</strong>
 
 yup. 
 <blockquote>How did you end up fixing this? Just too many verts yeah?
