--- a/wiki/threads/3714.md
+++ b/wiki/threads/3714.md
@@ -2,41 +2,41 @@
 
 
 ---
-<strong>Smurphy</strong>:
+<strong><span style="color:#34a7f9;">Smurphy</span>:</strong>
 
-<strong><span style="text\-decoration: underline">Thread Change Log</span></strong>
+<strong><span style="text-decoration: underline">Thread Change Log</span></strong>
    v1.1
-          \- Fixed the Ray Gun. It was missing the GDT for the effects and I didn&#39;t realise
+          - Fixed the Ray Gun. It was missing the GDT for the effects and I didn&#39;t realise
    v1.0
-          \- Released the Improved BO3 Ray Gun
+          - Released the Improved BO3 Ray Gun
 
-<strong><span style="text\-decoration: underline">Improved BO3 Ray Gun</span></strong> \- <strong><span style="text\-decoration: underline">V1.1</span></strong> \- <a href="https://mega.nz/file/3sVDAYiB#8VLmWqFkfoDObcKA2hb94kFr00GOEoOrjircf8XjaAQ"><strong>Download</strong></a>
+<strong><span style="text-decoration: underline">Improved BO3 Ray Gun</span></strong> - <strong><span style="text-decoration: underline">V1.1</span></strong> - <a href="https://mega.nz/file/3sVDAYiB#8VLmWqFkfoDObcKA2hb94kFr00GOEoOrjircf8XjaAQ"><strong>Download</strong></a>
 
-    \-Added Jump, Fall, Walk and Slide animations (Don&#39;t know why it doesn&#39;t have them already)
-    \-Changed the reticle back to red instead of the ugly white
-    \-Fixed the view model position, being so close to camera
-    \-Fixed the alignment of the aim down sights as Treyarch horribly misaligned it
-    \-Changed the effects back to how they were in preview COD&#39;s, using BO2 as the source as BO3&#39;s Ray Gun effects are awful
-    \-Doubled the damage to compensate for the balance change, with Double Tap II and Alternate Ammo Type&#39;s being added which made the BO3 Ray Gun useless
+    -Added Jump, Fall, Walk and Slide animations (Don&#39;t know why it doesn&#39;t have them already)
+    -Changed the reticle back to red instead of the ugly white
+    -Fixed the view model position, being so close to camera
+    -Fixed the alignment of the aim down sights as Treyarch horribly misaligned it
+    -Changed the effects back to how they were in preview COD&#39;s, using BO2 as the source as BO3&#39;s Ray Gun effects are awful
+    -Doubled the damage to compensate for the balance change, with Double Tap II and Alternate Ammo Type&#39;s being added which made the BO3 Ray Gun useless
 
 [MEDIA=youtube]F71341YdXqY[/MEDIA]
 
-<strong><span style="text\-decoration: underline">Credits</span>
-Scobalula</strong> \- For all his tools like always
-<strong>M5_Prodigy </strong>\- For testing it
-<strong>Treyarch</strong> \- For the good classic Ray Gun and the shit BO3 Ray Gun
+<strong><span style="text-decoration: underline">Credits</span>
+Scobalula</strong> - For all his tools like always
+<strong>M5_Prodigy </strong>- For testing it
+<strong>Treyarch</strong> - For the good classic Ray Gun and the shit BO3 Ray Gun
 
 ---
-<strong>xReaction</strong>:
+<strong><span style="color:#34a7f9;">xReaction</span>:</strong>
 
 not the hero we wanted, but the one we needed!
 
 ---
-<strong>M5_Prodigy</strong>:
+<strong><span style="color:#34a7f9;">M5_Prodigy</span>:</strong>
 
 Gonna get slammed by the classic splash damage
 
 ---
-<strong>[ Edicius ]</strong>:
+<strong><span style="color:#34a7f9;">[ Edicius ]</span>:</strong>
 
 EPIC!
