--- a/wiki/threads/3831.md
+++ b/wiki/threads/3831.md
@@ -2,7 +2,7 @@
 
 
 ---
-<strong>Debino</strong>:
+<strong><span style="color:#34a7f9;">Debino</span>:</strong>
 
 
 This simple zombies template is for the newer people starting in the mod tools.
@@ -10,28 +10,28 @@ L3AK Mod is needed for this template to work (<a href="https://wiki.modme.co/wik
 if there are any issues or bugs please report them ASAP
 [MEDIA=youtube]dMnuErsUtAw[/MEDIA]
 
-\- LUA HUD (default factory HUD)
-\- Perk sounds fix
-\- Player voices (voxes) added
-\- Mystery Boxes
-\- Dogs added/ fix (option to disable/ enable dogs)
-\- Changeable PaP Camo
-\- Changeable Starting weapon
-\- Changeable Player health
-\- Changeable Death machine
-\- Changeable Perk limit
-\- Changeable Starting points
-\- Changeable Zombie speed/ Health
-\- Dev commands
-\- Perk shaders
-\- Powerlag fix (no lag when power is turned on)
-\- Bo4 max ammo
+\-LUA HUD (default factory HUD)
+\-Perk sounds fix
+\-Player voices (voxes) added
+\-Mystery Boxes
+\-Dogs added/ fix (option to disable/ enable dogs)
+\-Changeable PaP Camo
+\-Changeable Starting weapon
+\-Changeable Player health
+\-Changeable Death machine
+\-Changeable Perk limit
+\-Changeable Starting points
+\-Changeable Zombie speed/ Health
+\-Dev commands
+\-Perk shaders
+\-Powerlag fix (no lag when power is turned on)
+\-Bo4 max ammo
 
 
 
-10/31/2021 \- v1.1 Initial release (happy Halloween)
-11/2/2021 \- v1.2 Added missing scripts (my fault lol)
-11/5/2021 \- v1.3 Replaced Robits shaders with Humphreys
+10/31/2021 - v1.1 Initial release (happy Halloween)
+11/2/2021 - v1.2 Added missing scripts (my fault lol)
+11/5/2021 - v1.3 Replaced Robits shaders with Humphreys
 
 
 
@@ -40,18 +40,18 @@ if there are any issues or bugs please report them ASAP
 
 
 <strong>CREDITS:</strong>
-\- Debino \-\- Making the template (no need to give me credit)
-\- HarryBo21 \-\- Perk Sounds, Mystery Boxes, Player Vox, etc
-\- Devraw Team \-\- Dog Prefab, Enable/ Disable Dogs, Pap Camo, Starting Weapon, Powerlag Fix, etc
-\- RudySPG \-\- Perk Lights
-\- Humphrey \-\- Perk Shaders
-\- Crazydude55 \-\- Player Health
-\- Sphynx&#39;s \-\- Console Commands
+\-Debino -- Making the template (no need to give me credit)
+\-HarryBo21 -- Perk Sounds, Mystery Boxes, Player Vox, etc
+\-Devraw Team -- Dog Prefab, Enable/ Disable Dogs, Pap Camo, Starting Weapon, Powerlag Fix, etc
+\-RudySPG -- Perk Lights
+\-Humphrey -- Perk Shaders
+\-Crazydude55 -- Player Health
+\-Sphynx&#39;s -- Console Commands
 
 
 
 [ATTACH width=&quot;500px&quot; alt=&quot;1275&quot;]1275[/ATTACH]
-<a href="https://mega.nz/file/3U0hjaKS#AuQOOe9ntEAWFHjvkzZUWfAX\-8AjCVycB99wteI_lQE">Bubbly Download</a>
+<a href="https://mega.nz/file/3U0hjaKS#AuQOOe9ntEAWFHjvkzZUWfAX-8AjCVycB99wteI_lQE">Bubbly Download</a>
 
 
 
@@ -61,6 +61,6 @@ if there are any issues or bugs please report them ASAP
 
 
 ---
-<strong>Debino</strong>:
+<strong><span style="color:#34a7f9;">Debino</span>:</strong>
 
-\-Added Blutig and Bubbly perk shader (11/18/2021)
+-Added Blutig and Bubbly perk shader (11/18/2021)
