--- a/wiki/threads/3832.md
+++ b/wiki/threads/3832.md
@@ -2,7 +2,7 @@
 
 
 ---
-<strong>Markus Darius</strong>:
+<strong><span style="color:#34a7f9;">Markus Darius</span>:</strong>
 
 So, I downloaded Logical&#39;s Cold War Weapon Pack from devraw site, I think I did everything right when installing it but in game the weapons makes no sounds.
 
