--- a/wiki/threads/3833.md
+++ b/wiki/threads/3833.md
@@ -2,7 +2,7 @@
 
 
 ---
-<strong>ReQiuYTPL</strong>:
+<strong><span style="color:#34a7f9;">ReQiuYTPL</span>:</strong>
 
 Hello! i have a problem with the refleftion proble, the doors don&#39;t stop the light, there&#39;s a lot of light from the door, i tried a lot of things, changing textures, changing the door model, creating a new map, a lot of things, and nothing.
 I attached a photo, to see how it is.
@@ -10,12 +10,12 @@ the walls are 16 thickness, i need help xd. Thank for all help!
 pd: i can&#39;t attach photos i don&#39;t know why.
 
 ---
-<strong>Brodie3750</strong>:
+<strong><span style="color:#34a7f9;">Brodie3750</span>:</strong>
 
 Would help if we could see the photo
 If you can get it attached it might make it easier to help you out
 
 ---
-<strong>Spiki</strong>:
+<strong><span style="color:#34a7f9;">Spiki</span>:</strong>
 
 imma slap you with a &quot;deal with it&quot; although i think on the light you can select &quot;probe only&quot; or something like that. never tried tho
