--- a/wiki/threads/3841.md
+++ b/wiki/threads/3841.md
@@ -2,7 +2,7 @@
 
 
 ---
-<strong>Fanatic</strong>:
+<strong><span style="color:#34a7f9;">Fanatic</span>:</strong>
 
 Ported an animation of this doorway blowing up, and it looks like it&#39;s fully working in APE, but when I try it in game, it looks as if half of the wooden shards aren&#39;t animated and just appear instantly.
 
@@ -13,18 +13,18 @@ Ported an animation of this doorway blowing up, and it looks like it&#39;s fully
 This is my first time working with animations, so apologies if it&#39;s an easy fix.
 
 ---
-<strong>eDeK</strong>:
+<strong><span style="color:#34a7f9;">eDeK</span>:</strong>
 
 [MEDIA=youtube]XoSGVRUTkA0[/MEDIA]
 
-[MEDIA=youtube]c_JN\-jJW7tI[/MEDIA]
+[MEDIA=youtube]c_JN-jJW7tI[/MEDIA]
 
 ---
-<strong>Fanatic</strong>:
+<strong><span style="color:#34a7f9;">Fanatic</span>:</strong>
 
 <blockquote>[MEDIA=youtube]XoSGVRUTkA0[/MEDIA]
 
-[MEDIA=youtube]c_JN\-jJW7tI[/MEDIA]
+[MEDIA=youtube]c_JN-jJW7tI[/MEDIA]
 </blockquote>
 That&#39;s the vid I followed at first, and tried the tag_origin fix and didn&#39;t seem to work.
 
