--- a/wiki/threads/3843.md
+++ b/wiki/threads/3843.md
@@ -2,14 +2,14 @@
 
 
 ---
-<strong>altTino</strong>:
+<strong><span style="color:#34a7f9;">altTino</span>:</strong>
 
 Hi, there !
 
 The question I&#39;m about to ask must have been thought for a long time by the more knowledgeable among you.
 But I haven&#39;t really found an answer.
 
-Is it possible to convert the original battlefield animations and rigs, to sea\-file? Be it the weapons or the other.
+Is it possible to convert the original battlefield animations and rigs, to sea-file? Be it the weapons or the other.
 So far I had to animate some models myself.
 
 But is there a possible solution ? Whether it&#39;s through a custom scriped tool or something like this ?
