--- a/wiki/threads/3844.md
+++ b/wiki/threads/3844.md
@@ -2,12 +2,12 @@
 
 
 ---
-<strong>blink-420</strong>:
+<strong><span style="color:#34a7f9;">blink-420</span>:</strong>
 
-Anyone know how I would go about adding a timer on\-screen that counts down?
+Anyone know how I would go about adding a timer on-screen that counts down?
 
 ---
-<strong>Sleepy216</strong>:
+<strong><span style="color:#34a7f9;">Sleepy216</span>:</strong>
 
 I haven&#39;t tried making a count down timer, but I do intend on it because I want to make a &quot;chaos mode&quot; kind of like the one in extinction.
 I just figured I&#39;d try to tell you where I was going to start on trying to figure out a timer that counts down, since it&#39;s better than nothing haha.
