--- a/wiki/threads/3845.md
+++ b/wiki/threads/3845.md
@@ -2,7 +2,7 @@
 
 
 ---
-<strong>BobbyLee298</strong>:
+<strong><span style="color:#34a7f9;">BobbyLee298</span>:</strong>
 
 so on the early rounds when the zombs walk, by the time they reach the player they tend to die before the player get the chance to kill them.
 
