--- a/wiki/threads/3846.md
+++ b/wiki/threads/3846.md
@@ -2,14 +2,14 @@
 
 
 ---
-<strong>THAN0S</strong>:
+<strong><span style="color:#34a7f9;">THAN0S</span>:</strong>
 
 When both Madgaz and Logical&#39;s perk packs are combined on a map the Banana Colada perk overlaps the ICU perk from Logical&#39;s pack. I&#39;ve seen both perk packs combined on the &quot;Town of the Tormented&quot; custom map so what&#39;s the secret to fixing this? It&#39;d be helpful for the people looking to combine both packs in their map in the future
 
 <img src="1279"><img src="1280">
 
 ---
-<strong>D-2-K</strong>:
+<strong><span style="color:#34a7f9;">D-2-K</span>:</strong>
 
 the problem is 
 they both use the same specialty names 
@@ -22,7 +22,7 @@ they both use the same specialty names
 \#define LOGICAL_PERK_ICU                  &quot;specialty_immunecounteruav&quot;
 
 ---
-<strong>THAN0S</strong>:
+<strong><span style="color:#34a7f9;">THAN0S</span>:</strong>
 
 <blockquote>the problem is
 they both use the same specialty names
