--- a/wiki/threads/3847.md
+++ b/wiki/threads/3847.md
@@ -2,17 +2,17 @@
 
 
 ---
-<strong>Fanatic</strong>:
+<strong><span style="color:#34a7f9;">Fanatic</span>:</strong>
 
 Is it possible to turn a Prefab I made with Brushes into an XModel?
 
 ---
-<strong>Spiki</strong>:
+<strong><span style="color:#34a7f9;">Spiki</span>:</strong>
 
 [URL unfurl=&quot;true&quot;]https://github.com/ardivee/Radler/releases/tag/v0.2[/URL]
 
 ---
-<strong>Fanatic</strong>:
+<strong><span style="color:#34a7f9;">Fanatic</span>:</strong>
 
 <blockquote>[URL unfurl=&quot;true&quot;]https://github.com/ardivee/Radler/releases/tag/v0.2[/URL]
 </blockquote>
