--- a/wiki/threads/3849.md
+++ b/wiki/threads/3849.md
@@ -2,7 +2,7 @@
 
 
 ---
-<strong>KillRideMasterJ</strong>:
+<strong><span style="color:#34a7f9;">KillRideMasterJ</span>:</strong>
 
 Has anyone seen this error before?. i just put in harrys apothicans margwas and panzer. it gives me this error.
 
@@ -23,14 +23,14 @@ camo errors.
 Thanks in advance!
 
 ---
-<strong>Harry Bo21</strong>:
+<strong><span style="color:#34a7f9;">Harry Bo21</span>:</strong>
 
 You are missing materials 
 
 Download my fx pack from devraw
 
 ---
-<strong>KillRideMasterJ</strong>:
+<strong><span style="color:#34a7f9;">KillRideMasterJ</span>:</strong>
 
 So i downloaded and installed them last night. I thought I had them, but I guess I didn&#39;t or I had an older version. But the error persists :( 
 Same error as before &#39;fx combo texture&#39; something or other.. i also found this up above the usual weapon camo error. Unsure if it&#39;s related but anything that can help at this point :/
@@ -68,19 +68,19 @@ csv:zone_source/zm_dude.zone
 Thanks for everything you do for the community Harry! you the real MVP
 
 ---
-<strong>Harry Bo21</strong>:
+<strong><span style="color:#34a7f9;">Harry Bo21</span>:</strong>
 
 Drag the fx folders back from the other assets
 
 As for your other errors they won’t stop linker, just a missing image and xcam
 
 ---
-<strong>KillRideMasterJ</strong>:
+<strong><span style="color:#34a7f9;">KillRideMasterJ</span>:</strong>
 
 Thanks a million Harry!!! Worked perfectly!
 
 ---
-<strong>eDeK</strong>:
+<strong><span style="color:#34a7f9;">eDeK</span>:</strong>
 
 You solved this error?
 
@@ -92,7 +92,7 @@ UNRECOVERABLE ERROR:
 I have the same error, how you solved?
 
 ---
-<strong>Harry Bo21</strong>:
+<strong><span style="color:#34a7f9;">Harry Bo21</span>:</strong>
 
 <blockquote>You solved this error?
 
