--- a/wiki/threads/3320.md
+++ b/wiki/threads/3320.md
@@ -2,10 +2,10 @@
 
 
 ---
-<strong>Qelifern</strong>:
+<strong><span style="color:#34a7f9;">Qelifern</span>:</strong>
 
-[SIZE=5]First of all, this is the first time I&#39;m releasing something this big, it has taken a long time to even get to this point with these staffs.
-Hopefully everything is included in the download, however if something is missing, point it out in the comments.[/SIZE]
+<span style="font-size:calc(13px + 5px);">First of all, this is the first time I&#39;m releasing something this big, it has taken a long time to even get to this point with these staffs.
+Hopefully everything is included in the download, however if something is missing, point it out in the comments.</span>
 
 The current state of these Staffs are W.I.P
 However they are complete with sounds, animations and effects.
@@ -22,18 +22,18 @@ Some changes have been made since.
 A full credits list is included in the download but I want to thank HarryBo21 and Scobalula especially.
 
 HarryBo21&#39;s FX Library is required:
-<a href="">https://www.t7mods.com/viewtopic.php?f=4&amp;t=9</a>
+<a href="https://www.t7mods.com/viewtopic.php?f=4&t=9">https://www.t7mods.com/viewtopic.php?f=4&amp;t=9</a>
 
 Almost all the scripts come from or originated from Scobalula&#39;s Cerberus so many thanks to you sir.
 
-[SIZE=5]Instructions for installation and upgrade steps are also included.[/SIZE]
+<span style="font-size:calc(13px + 5px);">Instructions for installation and upgrade steps are also included.</span>
 
 
 [ATTACH width=&quot;318px&quot; alt=&quot;792&quot;]792[/ATTACH][ATTACH width=&quot;500px&quot; alt=&quot;793&quot;]793[/ATTACH]
 
 
 
-[SIZE=6][FONT=courier new]&quot;Don&#39;t be a jerk&quot;, please if you use this to create content, give credit where credit is due.[/FONT][/SIZE]
+<span style="font-size:calc(13px + 6px);">&quot;Don&#39;t be a jerk&quot;, please if you use this to create content, give credit where credit is due.</span>
 
 
 
@@ -41,7 +41,7 @@ Almost all the scripts come from or originated from Scobalula&#39;s Cerberus so 
 
 
 
-[SIZE=5]Staff Code Names[/SIZE]
+<span style="font-size:calc(13px + 5px);">Staff Code Names</span>
 staff_fire_zm
 staff_fire_upgraded_zm
 staff_air_zm
@@ -54,16 +54,16 @@ staff_water_upgraded_zm
 Ex. /give staff_fire
 
 
-[FONT=trebuchet ms][SIZE=5]If you run into troubles when installing, make sure you read through all the steps and see if you missed something before commenting.[/SIZE][/FONT]
+<span style="font-size:calc(13px + 5px);">If you run into troubles when installing, make sure you read through all the steps and see if you missed something before commenting.</span>
 
-\- \-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-
+\------------------------------------------
 
-                   [SIZE=5][FONT=book antiqua]<a href="https://mega.nz/file/urx0QYhD#CUpJ_bc\-r0ovLhYaaZMvrKhkAkbqRPgHklrxilVZAJ0">DOWNLOAD</a>  v1.0.1[/FONT][/SIZE]
+                   <span style="font-size:calc(13px + 5px);"><a href="https://mega.nz/file/urx0QYhD#CUpJ_bc-r0ovLhYaaZMvrKhkAkbqRPgHklrxilVZAJ0">DOWNLOAD</a>  v1.0.1</span>
 
-\- \-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-
+\------------------------------------------
 
-[SIZE=5]<strong>Credits:</strong>[/SIZE]
-[FONT=book antiqua]AllModz
+<span style="font-size:calc(13px + 5px);"><strong>Credits:</strong></span>
+AllModz
 AndyWhelen
 Azsry
 BluntStuffy
@@ -106,69 +106,69 @@ WillJones1989
 Yen466
 Zeroy
 alexbgt
-thezombieproject[/FONT]
+thezombieproject
 
 ---
-<strong>Pepergogo</strong>:
+<strong><span style="color:#34a7f9;">Pepergogo</span>:</strong>
 
 Thank you soooo much for this! &#128588;
 
 ---
-<strong>brack5501</strong>:
+<strong><span style="color:#34a7f9;">brack5501</span>:</strong>
 
 What a great job brother &#128516; I really loved seeing the progress of your work! crack !! &lt;3
 
 ---
-<strong>ProfessorWeeWoo</strong>:
+<strong><span style="color:#34a7f9;">ProfessorWeeWoo</span>:</strong>
 
 awesome stuff! :cool::eek:
 
 ---
-<strong>Dilly</strong>:
+<strong><span style="color:#34a7f9;">Dilly</span>:</strong>
 
 Amazing work love it, cant wait to try them thanks :D
 
 ---
-<strong>Dilly</strong>:
+<strong><span style="color:#34a7f9;">Dilly</span>:</strong>
 
 File is no longer available for me?
 
 ---
-<strong>Qelifern</strong>:
+<strong><span style="color:#34a7f9;">Qelifern</span>:</strong>
 
 <blockquote>File is no longer available for me?
 </blockquote>
 Should be now, it got messed up for some reason...
 
 ---
-<strong>DestinyDobby</strong>:
+<strong><span style="color:#34a7f9;">DestinyDobby</span>:</strong>
 
-my impact fx looks like this <a href="">https://gyazo.com/d4615527ed2f299aefee5b2c1ef61d96</a> i have reinstalled harry&#39;s fx pack like 3 times, but it is still just a low quality cloud of smoke, any ideas?
+my impact fx looks like this <a href="https://gyazo.com/d4615527ed2f299aefee5b2c1ef61d96">https://gyazo.com/d4615527ed2f299aefee5b2c1ef61d96</a> i have reinstalled harry&#39;s fx pack like 3 times, but it is still just a low quality cloud of smoke, any ideas?
 
 ---
-<strong>Qelifern</strong>:
+<strong><span style="color:#34a7f9;">Qelifern</span>:</strong>
 
-<blockquote>my impact fx looks like this <a href="">https://gyazo.com/d4615527ed2f299aefee5b2c1ef61d96</a> i have reinstalled harry&#39;s fx pack like 3 times, but it is still just a low quality cloud of smoke, any ideas?
+<blockquote>my impact fx looks like this <a href="https://gyazo.com/d4615527ed2f299aefee5b2c1ef61d96">https://gyazo.com/d4615527ed2f299aefee5b2c1ef61d96</a> i have reinstalled harry&#39;s fx pack like 3 times, but it is still just a low quality cloud of smoke, any ideas?
 </blockquote>
 I get that aswell, I think it&#39;s to do with SSI settings in Radiant, not sure though.
 
 ---
-<strong>panzersoldat</strong>:
+<strong><span style="color:#34a7f9;">panzersoldat</span>:</strong>
 
 How do I get the genesis spawner actor ?
 
 ---
-<strong>Philip-p</strong>:
+<strong><span style="color:#34a7f9;">Philip-p</span>:</strong>
 
 link for the fx arent working cant download them
 
 ---
-<strong>CaramelFudge</strong>:
+<strong><span style="color:#34a7f9;">CaramelFudge</span>:</strong>
 
 link to the fx has been removed you should contact the author if you want them, don&#39;t hold your breath though,
 
 ---
-<strong>CaramelFudge</strong>:
+<strong><span style="color:#34a7f9;">CaramelFudge</span>:</strong>
 
 this conflicts with the apothicon servant // id say the anims are to blame  
 
@@ -180,7 +180,7 @@ as well as the crystal that too shows up as the defualt test texture
 worth a look into but regardless great work,.. if ya get bored id love to see the thunder fists up in here.
 
 ---
-<strong>Harry Bo21</strong>:
+<strong><span style="color:#34a7f9;">Harry Bo21</span>:</strong>
 
 <blockquote>this conflicts with the apothicon servant // id say the anims are to blame 
 
@@ -191,20 +191,20 @@ as well as the crystal that too shows up as the defualt test texture
 
 worth a look into but regardless great work,.. if ya get bored id love to see the thunder fists up in here.
 </blockquote>
-Considering those were issues with my last release \- it’s pretty obv what’s gone on here...
+Considering those were issues with my last release - it’s pretty obv what’s gone on here...
 
 ---
-<strong>CaramelFudge</strong>:
+<strong><span style="color:#34a7f9;">CaramelFudge</span>:</strong>
 
 Well me fixed it, i did, sir yes i did.
 
 ---
-<strong>CaramelFudge</strong>:
+<strong><span style="color:#34a7f9;">CaramelFudge</span>:</strong>
 
 Also harry it soumds like your accusing this guy of publishing your work? Be specific please dude this is how 9/11 became a inside job haha
 
 ---
-<strong>Harry Bo21</strong>:
+<strong><span style="color:#34a7f9;">Harry Bo21</span>:</strong>
 
 No but having the same asset issues means it obv is just the assets from my pack
 
@@ -213,7 +213,7 @@ haven’t looked at the rest
 can’t really “steal” ported assets
 
 ---
-<strong>CaramelFudge</strong>:
+<strong><span style="color:#34a7f9;">CaramelFudge</span>:</strong>
 
 <blockquote>No but having the same asset issues means it obv is just the assets from my pack
 
@@ -225,7 +225,7 @@ can’t really “steal” ported assets
 I bet he just copy pasted that asset pack like a bitch, haha jk nah either way good to see some quality stuff up here again wish i could contribute but sadly all the good stuff been taken down,  HydraX for one I only recently found out about,.. makes me sad :/ hahaha
 
 ---
-<strong>TheGobMob</strong>:
+<strong><span style="color:#34a7f9;">TheGobMob</span>:</strong>
 
 I keep getting this error can someone help
 
@@ -311,9 +311,9 @@ ERROR: &#39;wpn_waterstaff_storm_imp&#39; Line Number: 0
 ERROR:  Parse error in column &#39;DuckGroup&#39;. Value &#39;DuckGroup&#39; is not valid. wpn_waterstaff_storm_imp had empty field DuckGroup.
 
 ---
-<strong>CaramelFudge</strong>:
+<strong><span style="color:#34a7f9;">CaramelFudge</span>:</strong>
 
 Dis error occurs becuase  the alias is set up wrong in my experience 
 
 If you go to your sound  aliases  in the csv mentioned you&#39;ll probably find 
-\# &lt;\-\-\-\-\-\- that at the top. Remove it
+\# &lt;------ that at the top. Remove it
