--- a/wiki/threads/3722.md
+++ b/wiki/threads/3722.md
@@ -2,7 +2,7 @@
 
 
 ---
-<strong>VividNo</strong>:
+<strong><span style="color:#34a7f9;">VividNo</span>:</strong>
 
 So my cold war 1911&#39;s sound is working perfectly fine
 But every weapon ive added after that has had no sound example: (ANY WWII GUNS), (ANY COLD WAR GUNS), (ANY BLACK OPS 1 GUNS)
@@ -13,11 +13,11 @@ Ive added the line of text to user_aliases, zm_levelcommon_weapons (in my zm_&qu
 Any help would be appreciated :)
 
 ---
-<strong>Markus Darius</strong>:
+<strong><span style="color:#34a7f9;">Markus Darius</span>:</strong>
 
 Hi, did you solve the problem? Im with the same problem here and I can&#39;t fix it
 
 ---
-<strong>kikail</strong>:
+<strong><span style="color:#34a7f9;">kikail</span>:</strong>
 
 check if the sound file is .wav and if the frequence is 48000Hz in audacity like that for each sound <img src="1259">
