--- a/wiki/threads/3830.md
+++ b/wiki/threads/3830.md
@@ -2,7 +2,7 @@
 
 
 ---
-<strong>gunrock12</strong>:
+<strong><span style="color:#34a7f9;">gunrock12</span>:</strong>
 
 Just asking if someone could please convert these  shadowman .seanim animations into xanim_export for me?
 i would very grateful as i failed to get blender going and gave up with maya. theres only 4 files i need converted.
