--- a/wiki/threads/3835.md
+++ b/wiki/threads/3835.md
@@ -2,7 +2,7 @@
 
 
 ---
-<strong>BetiroVal</strong>:
+<strong><span style="color:#34a7f9;">BetiroVal</span>:</strong>
 
 Just some custom perk machines for Timeslip &amp; Blaze Phase (placed into the default Giant Map)
 <img src="1270"><img src="1271">
