--- a/wiki/threads/3837.md
+++ b/wiki/threads/3837.md
@@ -4,76 +4,76 @@
 ---
 <strong><span style="color:#CB2D36;">DTZxPorter</span>:</strong>
 
-Important notice: On 1/1/2022 | The Modme Forums will be closing. The Wiki will remain. Forum\-like content will be available on our new Discord: <a href="">https://discord.com/invite/Gf2hPWcUFt</a> Thanks to all who contributed to the legacy forums. Pardon the appearance while we configure everything.
+Important notice: On 1/1/2022 | The Modme Forums will be closing. The Wiki will remain. Forum-like content will be available on our new Discord: <a href="https://discord.com/invite/Gf2hPWcUFt">https://discord.com/invite/Gf2hPWcUFt</a> Thanks to all who contributed to the legacy forums. Pardon the appearance while we configure everything.
 
 ---
-<strong>Spiki</strong>:
+<strong><span style="color:#34a7f9;">Spiki</span>:</strong>
 
 noooooooooooooooooooooooooooooooooooooooo
 
 ---
-<strong>D-2-K</strong>:
+<strong><span style="color:#34a7f9;">D-2-K</span>:</strong>
 
 Its been a good ride will see you all in the discord server (y)
 
 ---
-<strong>Bruhman</strong>:
+<strong><span style="color:#34a7f9;">Bruhman</span>:</strong>
 
 <blockquote>noooooooooooooooooooooooooooooooooooooooo
 </blockquote>
 that seems very genuine spiki LMAO maybe this means a decrease in over used assets in box maps???
 
 ---
-<strong>Harry Bo21</strong>:
+<strong><span style="color:#34a7f9;">Harry Bo21</span>:</strong>
 
 <blockquote>that seems very genuine spiki LMAO maybe this means a decrease in over used assets in box maps???
 </blockquote>
 What assets
 
 ---
-<strong>Spiki</strong>:
+<strong><span style="color:#34a7f9;">Spiki</span>:</strong>
 
 <blockquote>that seems very genuine spiki LMAO maybe this means a decrease in over used assets in box maps???
 </blockquote>
 Don’t worry. Imma reopen t7mods.com whenever kyle gets around to it
 
 ---
-<strong>Harry Bo21</strong>:
+<strong><span style="color:#34a7f9;">Harry Bo21</span>:</strong>
 
 <blockquote>Don’t worry. Imma reopen t7mods.com whenever kyle gets around to it
 </blockquote>
 Lmao do not hold your breathe you could literally die waiting for him to do anything no matter how small
 
 ---
-<strong>Spiki</strong>:
+<strong><span style="color:#34a7f9;">Spiki</span>:</strong>
 
 <blockquote>Lmao do not hold your breathe you could literally die waiting for him to do anything no matter how small
 </blockquote>
 Ya some of us have things to do during the day and sometimes night
 
 ---
-<strong>Bruhman</strong>:
+<strong><span style="color:#34a7f9;">Bruhman</span>:</strong>
 
 <blockquote>Don’t worry. Imma reopen t7mods.com whenever kyle gets around to it
 </blockquote>
 t7mods was formatted so nicely.... shame some 30 yr old piece of shit had to ruin it!
 
 ---
-<strong>Bruhman</strong>:
+<strong><span style="color:#34a7f9;">Bruhman</span>:</strong>
 
 <blockquote>Lmao do not hold your breathe you could literally die waiting for him to do anything no matter how small
 </blockquote>
  hey bro appreciate your help on qeliferns staffs. anyways please stfu :D
 
 ---
-<strong>Spiki</strong>:
+<strong><span style="color:#34a7f9;">Spiki</span>:</strong>
 
 <blockquote>t7mods was formatted so nicely.... shame some 30 yr old piece of shit had to ruin it!
 </blockquote>
 you dont need to bully the man
 
 ---
-<strong>Harry Bo21</strong>:
+<strong><span style="color:#34a7f9;">Harry Bo21</span>:</strong>
 
 <blockquote>t7mods was formatted so nicely.... shame some 30 yr old piece of shit had to ruin it!
 </blockquote>
