--- a/wiki/threads/3838.md
+++ b/wiki/threads/3838.md
@@ -2,16 +2,16 @@
 
 
 ---
-<strong>Dejo505</strong>:
+<strong><span style="color:#34a7f9;">Dejo505</span>:</strong>
 
 I imported a lot of custom weapons. And they all work. I added Cold War weapons from pmr360 and they work.  Then I saw he updated those weapons and I deleted my old ones and put in the new ones. They basically float and don&#39;t work and their animations are janky and move in slow mo. Then I tried other custom weapons and they don&#39;t work either. Any new custom weapons I put in my map don&#39;t work, they just float. No error, no anything. I thought it was the weapon limit soo I removed my old weapons and the problem still persists. Did I fuck up my files somehow? If I did shouldn&#39;t there be an error. But there are no errors. I also tried deleting everything cold war related, and it doesn&#39;t matter, new weapons of any sort don&#39;t work. (if I verify game cache will that destroy my maps?)
 
 ---
-<strong>Dejo505</strong>:
+<strong><span style="color:#34a7f9;">Dejo505</span>:</strong>
 
 Fixed. All I had to do was change my windows regional settings to English. Date and time and language. Now it works.
 
 ---
-<strong>Dejo505</strong>:
+<strong><span style="color:#34a7f9;">Dejo505</span>:</strong>
 
 You also have to redownload the weapons if it happens to you.
