--- a/wiki/threads/3840.md
+++ b/wiki/threads/3840.md
@@ -2,13 +2,13 @@
 
 
 ---
-<strong>Duck</strong>:
+<strong><span style="color:#34a7f9;">Duck</span>:</strong>
 
 The shadows look fine in radiant but in game they look all low res, its not the model being downgraded since I went into ape and removed the lower detail ones just to be sure, I have no idea what is causing this and I&#39;m tearing my hair out trying to figure it out lol, any help here would be appreciated.
 [IMG]https://cdn.discordapp.com/attachments/725949627651850282/908795915995848725/unknown.png[/IMG][IMG]https://cdn.discordapp.com/attachments/529421724660400150/908801231051448360/1.png[/IMG]
 
 ---
-<strong>No_One✔</strong>:
+<strong><span style="color:#34a7f9;">No_One✔</span>:</strong>
 
 You can try using light culling (iirc). So select the light, and I think somewhere in the middle of the light properties, there is a variable that you can change (I think it&#39;s called light_culling, or somewhere along those lines). Change it to about 0.05 or 0.1, and the light should automatically not cast the shadows that you wanted gone.
 
